--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ streamlit
 pandas
 numpy
 matplotlib
+japanize-matplotlib
 seaborn
 pypfopt
-japanize-matplotlib
 gspread
-gspread-dataframe
+oauth2client
 google-auth
-google-auth-oauthlib
+openpyxl
