--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-streamlit
-pandas
-numpy
-matplotlib
-japanize-matplotlib
-seaborn
-pypfopt
-gspread
-oauth2client
-google-auth
-openpyxl
+streamlit==1.39.0
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.9.2
+japanize-matplotlib==1.1.3
+seaborn==0.13.2
+PyPortfolioOpt==1.5.6
+gspread==6.1.2
+oauth2client==4.1.3
+google-auth==2.35.0
+openpyxl==3.1.5
+
